Fixed typos according to Grammarly

--- a/MG.tex
+++ b/MG.tex
@@ -1,4 +1,3 @@
-%\documentclass[prd,twocolumn,aps,psfig,showpacs,nofootinbib,nobibnotes,superscriptaddress,preprintnumbers,times]{revtex4}
 \documentclass[prd,twocolumn,aps,psfig,nofootinbib,nobibnotes,superscriptaddress,preprintnumbers,times]{revtex4-2}
 \setlength{\topmargin}{-14mm}
 \usepackage{graphicx,bm,color,amsmath,amssymb, mathtools,subcaption}
@@ -462,15 +461,15 @@ $\displaystyle##$\hfil\cr>\cr\sim\cr}}}
 \affiliation{Abastumani Astrophysical Observatory, Tbilisi, GE-0179, Georgia}
 
 \begin{abstract}
-Convincing evidence of a stochastic gravitational wave (GW) background has been found by the NANOGrav collaboration in the 15-year data set. From this signal, we can evaluate the possibility of its source being from the early universe through the tensor perturbations induced by a massive spin-2 graviton field. We consider a time-dependent model of the minimal theory of massive gravity (MG), and find values of the graviton mass, mass cutoff time, and Hubble rate of inflation that amplify the energy spectra of primordial GWs sufficiently to reproduce the signal from the NANOGrav data within 1-3 standard deviation. However, a suppression mechanism for high frequency modes must be introduced to conservatively obey the big bang nucleosynthesis (BBN) bound. While there are regions of the parameter space that reproduce the signal, it remains a challenge to simultaneously respect the BBN and cosmic microwave background (CMB) bounds without making the graviton mass cutoff time too deep into the matter dominated era.
+Convincing evidence of a stochastic gravitational wave (GW) background has been found by the NANOGrav collaboration in the 15-year data set. From this signal, we can evaluate the possibility of its source being from the early universe through the tensor perturbations induced by a massive spin-2 graviton field. We consider a time-dependent model of the minimal theory of massive gravity (MG) and find values of the graviton mass, mass cutoff time, and Hubble rate of inflation that amplify the energy spectra of primordial GWs sufficiently to reproduce the signal from the NANOGrav data within 1-3 standard deviation. However, a suppression mechanism for high frequency modes must be introduced to conservatively obey the big bang nucleosynthesis (BBN) bound. While there are regions of the parameter space that reproduce the signal, it remains a challenge to simultaneously respect the BBN and cosmic microwave background (CMB) bounds without making the graviton mass cutoff time too deep into the matter dominated era.
 \end{abstract}
 
 \maketitle
 \section{Introduction}
-Evidence supporting the existence of a stochastic gravitational wave background (SGWB) has been found by 15 years of observation of pulsars by the North American Nanohertz Observatory for GWs (NANOGrav) collaboration \cite{Agazie:2023}, as well as by the Chinese Pulsar Timing Array (CPTA) \cite{Xu:2023wog}, the European Pulsar Timing Array (EPTA) \cite{EPTA:2023sfo, EPTA:2023akd, EPTA:2023fyk}, and the Parkes Pulsar Timing Array (PPTA) \cite{Zic:2023gta,Reardon:2023gzh}. We investigate alternatives to the astrophysical explanation (like inspiraling supermassive black hole binaries (SMBHBs) \cite{Rajagopal:1995,Jaffe:2002rt,Burke-Spolaor:2018bvk}), such as the time-dependent model of massive gravity (MG) proposed in Ref.\ \cite{Fujita:2018ehq}. 
+Evidence supporting the existence of a stochastic gravitational wave background (SGWB) has been found in 15 years of observation of pulsars by the North American Nanohertz Observatory for GWs (NANOGrav) collaboration \cite{Agazie:2023}, as well as by the Chinese Pulsar Timing Array (CPTA) \cite{Xu:2023wog}, the European Pulsar Timing Array (EPTA) \cite{EPTA:2023sfo, EPTA:2023akd, EPTA:2023fyk}, and the Parkes Pulsar Timing Array (PPTA) \cite{Zic:2023gta,Reardon:2023gzh}. We investigate alternatives to the astrophysical explanation (like inspiraling supermassive black hole binaries (SMBHBs) \cite{Rajagopal:1995,Jaffe:2002rt,Burke-Spolaor:2018bvk}), such as the time-dependent model of massive gravity (MG) proposed in Ref.\ \cite{Fujita:2018ehq}. 
 
 Compared to astrophysical origins, more exotic explanations lie in cosmological sources of the SGWB  \cite{Maggiore:1999vm, Caprini:2018mtu, Chen:2021wdo, Wu:2021kmd, Chen:2021ncc, PPTA:2022eul, Wu:2023pbt, Wu:2023dnp, Madge:2023cak, Ellis:2023oxs}. Such cosmological explanations for the source include  cosmic strings \cite{Damour:2004kw,Siemens:2006yp, Chen:2022azo,Bian:2022tju}, domain walls \cite{Ferreira:2022zzo, Zhang:2023nrs}, first-order phase transitions in the early universe \cite{Kibble:1976sj, Vilenkin:1984ib,Caprini:2010xv, Kobakhidze:2017mru, Arunasalam:2017ajm, Xue:2021gyq, NANOGrav:2021flc, Moore:2021ibq, Addazi:2023jvg, Athron:2023xlk, Bringmann:2023opz, Ashoorioon:2022raz}, primordial magnetic fields \cite{Neronov:2020qrl,Brandenburg:2021tmp,RoperPol:2022iel,Kahniashvili:2021gym}, primordial GWs \cite{Grishchuk:1976, Grishchuk:1977zz, Starobinsky:1980te, Linde:1981mu, Fabbri:1983us, Grishchuk:2005qe, Lasky:2015lej, Kawai:2023nqs, Basilakos:2023xof, Basilakos:2023jvp}, scalar-induced GWs \cite{Tomita:1967non, Saito:2008jc, Young:2014ana, Yuan:2019udt, Yuan:2019wwo, Chen:2019xse, Cai:2019bmk, Yuan:2019fwv, Liu:2021jnw, Liu:2023ymk, Cai:2023dls, Choudhury:2023fjs, Choudhury:2023fwk, Bhattacharya:2023ysp, Choudhury:2023hfm, Kawai:2021edk} generated by primordial black holes \cite{Zeldovich:1967lct,Hawking:1971ei,Carr:1974nx,Chen:2018czv,Chen:2018rzo,Liu:2018ess,Liu:2019rnx,Chen:2019irf,Liu:2020cds,Wu:2020drm,Chen:2021nxo,Chen:2022fda,Chen:2022qvg,Liu:2022iuf,Zheng:2022wqo, Choudhury:2013woa, Franciolini:2023pbf}, and even non-GW explanations \cite{Chowdhury:2023xvy}. The NANOGrav and EPTA collaborations have considered some of these aforementioned new physics sources \cite{Afzal:2023,EPTA:2023xxk}.
-In this paper, we consider the primordial GW hypothesis, with an amplification due to MG. We consider MG due to its promising ability to explain the present exponential expansion. 
+In this paper, we consider the primordial GW hypothesis, with an amplification due to MG. We consider MG as a promising alternative to explain the present exponential expansion. 
 
 Primordial GWs generated during inflation, being generated through parametric resonance amplification of quantum mechanical fluctuation, and freely propagating in the radiation-dominated plasma, are predicted by theory 
 \cite{Grishchuk:1976,Grishchuk:1977zz,Starobinsky:1980te,Linde:1981mu,Fabbri:1983us}. We can expect that the signatures of these waves we detect differ from what we expect based on general relativity (GR). In fact, the generation and propagation of these primordial GWs could very well be modified by alternate theories of gravity, including MG, first introduced by Fierz and Pauli in 1939 \cite{Fierz:1939ix}. Since then, many attempts have been made to construct a consistent non-linear theory of MG. Any purely linear theory suffers from the van Dam-Veltman-Zakharov (vDVZ) discontinuity \cite{vanDam:1970vg,Zakharov:1970cc}, which prevents the theory from reducing to GR in the massless limit. Attempts have been made to address this, like the nonlinear extensions to the Fierz-Pauli theory that exhibit the Vainshtein mechanism \cite{Vainshtein:1972sx}. This has its own set of problems, like the Boulware-Deser ghost and other ghost degrees of freedom \cite{Boulware:1972yco,Dubovsky:2004sg}. This presents a significant obstacle for trying to come up with a consistent theory.
@@ -530,7 +529,7 @@ The scale factor, as described in Eq.\ 4 of Ref.\ \cite{Fujita:2018ehq}, is
         a_r \tau/\tau_r & \tau > \tau_r \\
    \end{cases} \ ,
 \end{equation}
-where $H_{\inf}$ is the Hubble parameter during inflation when the scale corresponding to the CMB exits the Hubble horizon and $a_r$ is the scale factor at the reheating time $\tau_r = 1/(a_r H_{\inf})$. We will assume $a_r$ is fixed in this discussion, while $H_{\inf}$ and $\tau_r$ may vary. The bounds on $H_{\inf}$ are discussed in Ref.\ \cite{Jiang:2015qor}, and they will be respected in this paper. The scale factor in this model has a peculiar behavior where it is not defined in the region $(-\tau_r, \tau_r)$ and only takes values outside of that interval. This is to allow for the scale factor and its first derivative to be continuous and to avoid the singularity at $\tau = 0$. Fig.\ \ref{fig:mode} illustrates how a generic mode function would look like, showing  the discontinuity in the conformal time. The behavior in the three regions of $\tau$ are discussed in detail in Ref.\ \cite{Fujita:2018ehq}.
+where $H_{\inf}$ is the Hubble parameter during inflation when the scale corresponding to the CMB exits the Hubble horizon and $a_r$ is the scale factor at the reheating time $\tau_r = 1/(a_r H_{\inf})$. We will assume $a_r$ is fixed in this discussion, while $H_{\inf}$ and $\tau_r$ may vary. The bounds on $H_{\inf}$ are discussed in Ref.\ \cite{Jiang:2015qor}, and they will be respected in this paper. The scale factor in this model has a peculiar behavior where it is not defined in the region $(-\tau_r, \tau_r)$ and only takes values outside of that interval. This is to allow for the scale factor and its first derivative to be continuous and to avoid the singularity at $\tau = 0$. Fig.\ \ref{fig:mode} illustrates how a generic mode function would look like, showing the discontinuity in the conformal time. The behavior in the three regions of $\tau$ is discussed in detail in Ref.\ \cite{Fujita:2018ehq}.
 
 We model the graviton mass as the function given in Eq.\ 5 of Ref.\ \cite{Fujita:2018ehq}
 \begin{equation}\label{eqn:mass_case}
@@ -540,7 +539,7 @@ We model the graviton mass as the function given in Eq.\ 5 of Ref.\ \cite{Fujita
         0 & \tau > \tau_m
    \end{cases} \ ,
 \end{equation} 
-where $\tau_m$ is the conformal time when the graviton mass instantaneously drops to 0. A smoothly decaying function would be preferred, but the exact form of this function is highly model dependent and can depend on the dynamics of other fields, for example some scalar field $\mu(\phi(\tau))$. The general phenomenological aspects of a theory of massive gravity with a time dependent graviton mass can still be explored with the simplest scheme for time-dependence, a step function model, with the benefit of simplifying numerical calculations and avoiding the intricacies coming from model dependent scalar fields.
+where $\tau_m$ is the conformal time when the graviton mass instantaneously drops to 0. A smoothly decaying function would be preferred, but the exact form of this function is highly model dependent and can depend on the dynamics of other fields, for example, some scalar field $\mu(\phi(\tau))$. The general phenomenological aspects of a theory of massive gravity with a time dependent graviton mass can still be explored with the simplest scheme for time-dependence, a step function model, with the benefit of simplifying numerical calculations and avoiding the intricacies coming from model dependent scalar fields.
 
 \section{Energy Density of gravitational waves}\label{sec:energy}
 When we study models of gravity, we often have to determine how GWs from the primordial era are influenced by deviations from GR. The energy density spectrum of these GWs at the present time as a function of frequency is perhaps the most practical way to observe the effects of beyond-GR theories. We want to look at the energy fraction of the GWs per logarithmic interval of $k$ at the current time. We have the following definition for the energy density 
@@ -582,11 +581,11 @@ Since we are interested in the energy density at the present, we consider $\Omeg
 \end{equation}
 In anticipation of our consideration of certain parameters in the next section, we look at the behavior of the energy density as a function of different parameters. Fig.\ \ref{fig:contours} shows how $\Omega_{\text{GW},0}$ varies with changing $m$, $\tau_m$, and $H_{\inf}$. We note that in Fig.\ \ref{fig:contours} for the topmost and bottommost plots where we are not varying the ratio $\tau_m/\tau_r$, but for the bottom subplot, we are varying it indirectly since $\tau_r$ changes with $H_{\inf}$.
 
-In order to find the region in the parameter space that is able to produce the energy density observed in NG15, we obtain the parameters that fall within 1-3 $\sigma$ of the NG15 at the lower and upper bound of frequency. Fig.\ \ref{contours} shows a small region, in orange, in each plot that corresponds to these energy densities for a particular set of parameters. By looking at the energy density dependence on $m, \tau_m$, and $H_{\inf}$, we are able to find the parameters that reproduce the signal.
+In order to find the region in the parameter space that is able to produce the energy density observed in NG15, we obtain the parameters that fall within 1-3 $\sigma$ of the NG15 at the lower and upper bound of frequency. Fig.\ \ref{fig:contours} shows a small region, in orange, in each plot that corresponds to these energy densities for a particular set of parameters. By looking at the energy density dependence on $m, \tau_m$, and $H_{\inf}$, we are able to find the parameters that reproduce the signal.
 
 
 \section{Results}\label{sec:results}
-We now discuss the region of the parameter space that can potentially explain the signals from NG15. The constraints we can place on the SFM based on NG15 are done by seeing how we can change the parameters $M_{\text{GW}}, \tau_m$ and $H_{\inf}$ to fit the signal. Our initial approach of fixing $H_{\inf}$ to $10^8 \GeV$, like in Ref.\ \cite{Fujita:2018ehq} and letting $m$ and $\tau_m$ vary did not produce any energy density from inflation that could possibly reproduce NG15. We see in the middle plot of Fig.\ \ref{fig:contours} that increasing $\tau_m$ uniformly increases the primordial energy density, at the frequency bounds chosen. 
+We now discuss the region of the parameter space that can potentially explain the signals from NG15. The constraints we can place on the SFM based on NG15 are done by seeing how we can change the parameters $M_{\text{GW}}, \tau_m$, and $H_{\inf}$ to fit the signal. Our initial approach of fixing $H_{\inf}$ to $10^8 \GeV$, like in Ref.\ \cite{Fujita:2018ehq} and letting $m$ and $\tau_m$ vary did not produce any energy density from inflation that could possibly reproduce NG15. We see in the middle plot of Fig.\ \ref{fig:contours} that increasing $\tau_m$ uniformly increases the primordial energy density, at the frequency bounds chosen. 
 
 \begin{figure}
 \includegraphics[width=\linewidth]{fig2.pdf}
@@ -611,7 +610,7 @@ where $f_{BBN}$ is the present day frequency at which the GWs at the time of BBN
     \Omega_{\text{GW}}(f) \lesssim 1 \times 10^{-6},\ f > f_{\text{BBN}} \ .
 \end{equation}
 
-Although it may appear that the energy densities we consider in Fig.\ \ref{fig:GWB} violate the BBN bound for higher frequencies, since the energy densities in the full range of frequencies pass into the forbidden energy range as we see in Fig.\ \ref{fig:supp}, we keep in mind that the BBN bound only applies to GWs that were blue tilted by massive gravitons before BBN took place. If the graviton were massive during BBN 
+Although it may appear that the energy densities we consider in Fig.\ \ref{fig:GWB} violate the BBN bound for higher frequencies since the energy densities in the full range of frequencies pass into the forbidden energy range as we see in Fig.\ \ref{fig:supp}, we keep in mind that the BBN bound only applies to GWs that were blue tilted by massive gravitons before BBN took place. If the graviton were massive during BBN 
 \begin{equation}\label{eqn:massive_bbn}
     \frac{\tau_m}{\tau_r} \gtrsim \frac{\tau_{\text{BBN}}}{\tau_r} = \sqrt{\frac{H_{\inf}}{H_{\text{BBN}}}}\ ,
 \end{equation}
@@ -626,7 +625,7 @@ We note that if we still wish to conservatively respect the BBN bound in the sam
 \end{figure}
 
 \section{Discussion}\label{sec:discussion}
-In this paper, we discussed how the step function mass model of MG can reproduce NG15. We note that the selection of the parameters in the step function mass model leads to energy densities that violate the BBN bound for higher frequencies, specifically in the region of frequencies approximately greater than $10^{-6}$ Hz. We propose that there could be some mechanism that suppresses the energy density of GWs from the primordial era for those frequencies. A mechanism analogous to the damping of the energy density from the free-streaming neutrinos \cite{Durrer:1997ta,Weinberg:2003ur} could be behind such a suppression necessary to obey the BBN bound, if this model of MG is to be the dominant source of the background. For example, the propagation of GWs in the turbulent primordial radiation-dominated plasma\footnote{Turbulent sources induce GWs through their anisotropic stress tensor, with $\Omega_{\rm GW} \propto f^{-8/3}$ for  high frequencies.} \cite{RoperPol:2019wvy} may provide the necessary suppression at the short wavelength regime \cite{Deryagin:1986}. 
+In this paper, we discussed how the step function mass model of MG can reproduce NG15. We note that the selection of the parameters in the step function mass model leads to energy densities that violate the BBN bound for higher frequencies, specifically in the region of frequencies approximately greater than $10^{-6}$ Hz. We propose that there could be some mechanism that suppresses the energy density of GWs from the primordial era for those frequencies. A mechanism analogous to the damping of the energy density from the free-streaming neutrinos \cite{Durrer:1997ta,Weinberg:2003ur} could be behind such a suppression necessary to obey the BBN bound, if this model of MG is to be the dominant source of the background. For example, the propagation of GWs in the turbulent primordial radiation-dominated plasma\footnote{Turbulent sources induce GWs through their anisotropic stress tensor, with $\Omega_{\rm GW} \propto f^{-8/3}$ for high frequencies.} \cite{RoperPol:2019wvy} may provide the necessary suppression at the short wavelength regime \cite{Deryagin:1986}. 
 
 Observations of GWs have placed progressively tighter constraints on the possibility of gravitons with a very low but constant nonzero mass \cite{Bernardo:2023mxc, Wu:2023rib, Wang:2023div, deRham:2016nuf}, including much lower bounds with time-independent MTMG \cite{DeFelice:2021trp, DeFelice:2023bwq}. Therefore, the more plausible possibility of MG is the scenario in which the graviton mass is a function of time. We have only considered a step function as the time-dependent function, but more complicated functions are possible. The mechanism behind such a mass decay would come from the exact nature of the phase transition of the gravitational field. It may be fruitful to pursue an investigation to place constraints on the specific evolution of the mass during the phase transition. Then, we would be able to probe the mass evolution and shed insight into the time-dependent behavior beyond a step function. 
 
@@ -636,7 +635,7 @@ Additionally, further observations that place constraints on the Hubble rate of 
 {\bf Data availability} --- The NANOGrav 15-Year data used in this paper is available at \href{https://nanograv.org/science/data}{NANOGrav}. Source code to reproduce all of the figures in this paper is available in our GitHub repository \cite{GH}. 
 
 \vspace{2mm}
-{\bf Acknowledgements} --- We thank Sachiko Kuroyanagi and Shinji Mukohyama for helpful discussions related to the theoretical foundation of SFM, \cite{Fujita:2018ehq}, their useful comments and their feedback. We appreciate discussions from Axel Brandenburg, Neil J.\ Cornish, and Arthur B.\ Kosowsky. We thank Emma Clarke, Jeffrey S.\ Hazboun, and William G.\ Lamb for their help with plotting NG15, and Sayan Mandal for interpreting our results. We thank the organizers and participants of the PITT PACC workshop ``Unravelling the Universe with Pulsar Timing Arrays Workshop" during which the paper has been finalized. TK and MG acknowledge partial support from the NASA Astrophysics Theory Program (ATP) Award 80NSSC22K0825.
+{\bf Acknowledgements} --- We thank Sachiko Kuroyanagi and Shinji Mukohyama for helpful discussions related to the theoretical foundation of SFM, \cite{Fujita:2018ehq}, their useful comments, and their feedback. We appreciate discussions from Axel Brandenburg, Neil J.\ Cornish, and Arthur B.\ Kosowsky. We thank Emma Clarke, Jeffrey S.\ Hazboun, and William G.\ Lamb for their help with plotting NG15, and Sayan Mandal for interpreting our results. We thank the organizers and participants of the PITT PACC workshop ``Unravelling the Universe with Pulsar Timing Arrays Workshop" during which the paper has been finalized. TK and MG acknowledge partial support from the NASA Astrophysics Theory Program (ATP) Award 80NSSC22K0825.
 
 \bibliographystyle{apsrev4-2_edited}
 \bibliography{refs}
