The additions now are in a red-colored font

--- a/refs.bib
+++ b/refs.bib
@@ -1814,3 +1814,17 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv231110530D},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article{DAmico:2012hia,
+    author = "D'Amico, Guido and Gabadadze, Gregory and Hui, Lam and Pirtskhalava, David",
+    title = "{Quasidilaton: Theory and cosmology}",
+    eprint = "1206.4253",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "NYU-TH-09-18-12, UCSD-PTH-12-09",
+    doi = "10.1103/PhysRevD.87.064037",
+    journal = "Phys. Rev. D",
+    volume = "87",
+    pages = "064037",
+    year = "2013"
+}
